--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
 
   # misc widgets
   flutter_svg: ^2.0.0+1
+  google_nav_bar: ^5.0.6
 
   # misc utils
   intl: ^0.18.0
@@ -57,6 +58,8 @@ dependency_overrides:
   intl: ^0.18.0
 
 flutter:
+  uses-material-design: true
+
   assets:
     - assets/img/uek_logo.png
 
