--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   # misc utils
   intl: ^0.18.0
 
+  # web
+  chaleno: ^0.0.7
+
   # code generator runtimes
   freezed_annotation: ^2.2.0
   json_annotation: ^4.3.0
