--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # misc utils
   intl: ^0.18.0
   search_highlight_text: ^1.0.0+2
+  nfc_manager: ^3.5.0
 
   # web
   chaleno: ^0.0.7
