--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   intl: ^0.18.0
   search_highlight_text: ^1.0.0+2
   nfc_manager: ^3.5.0
+  lottie: ^3.0.0
 
   # web
   chaleno: ^0.0.7
@@ -69,6 +70,8 @@ flutter:
 
   assets:
     - assets/img/uek_logo.png
+    - assets/lottie/checkmark_white.json
+    - assets/lottie/scan_phone.json
 
   fonts:
     - family: Poppins
