--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
   fast_immutable_collections: ^10.2.2
 
   # firebase
-  firebase_core: ^2.4.1
+  firebase_core: ^3.2.0
+  cloud_firestore: ^5.1.0
+  firebase_auth: ^5.1.2
 
   # platform APIs
 
